k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-cache
  namespace: grpc-cache
spec:
  selector:
    name: grpc-cache
  ports:
    - name: grpc
      port: 5001
      targetPort: 5001
