k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: grpc-cache
  namespace: grpc-cache
  annotations:
    "kubernetes.io/ingress.class": "nginx"
    "nginx.ingress.kubernetes.io/backend-protocol": "GRPC"
    "nginx.ingress.kubernetes.io/ssl-redirect": "true"
spec:
  rules:
    - host: grpc-cache.example.com
      http:
        paths:
          - backend:
              serviceName: grpc-cache
              servicePort: grpc
